# language_recognition

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  LICENSE  README.md  docker-compose.yml  docker_docs.md  docker_streamlit_hub.md  pyproject.toml  requirements-api.txt  requirements-streamlit.txt  requirements.txt  streamlit_app.py
app/: __init__.py  main.py
notebooks/: eda.ipynb
scripts/: __init__.py  train_pipeline.py
src/: __init__.py  data_preprocessing.py  data_split.py  model_training.py  text_cleaning.py
