[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "language-recognition"
version = "0.1.0"
description = "Language detection training and API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "pandas",
    "pydantic",
]

[project.scripts]
train-pipeline = "scripts.train_pipeline:main"

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "matplotlib",
]
ui = [
    "streamlit>=1.33",
    "httpx>=0.27",
]

[tool.setuptools]
packages = ["src", "scripts"]
